crates/swc/tests/tsc-references/nullAssignedToUndefined.1.normal.js
//// [nullAssignedToUndefined.ts]
var x = undefined = null; // error
var y = null; // ok, widened
